# its-conversion

./: CMakeLists.txt  Dockerfile  README.md
src/: KoatBaseListener.cpp  KoatBaseListener.h  KoatBaseVisitor.cpp  KoatBaseVisitor.h  KoatLexer.interp  KoatLexer.tokens  KoatParseVisitor.cpp  KoatParseVisitor.h  ariparser.cpp  ariparser.hpp  its.cpp  its.hpp  itsparser.cpp  itsparser.hpp  main.cpp  parser.cpp  parser.hpp  sexpresso.cpp  sexpresso.hpp  util.cpp  util.hpp
